--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="min-h-screen flex justify-center items-center bg-[#F3EFE0] font-sans relative overflow-hidden">
+<div class="min-h-screen flex justify-center items-center bg-[#F3EFE0] font-sans relative overflow-hidden">
 
   <div class="absolute top-[-10%] left-[-10%] w-96 h-96 bg-[#B08D55]/5 rounded-full blur-3xl"></div>
   <div class="absolute bottom-[-10%] right-[-10%] w-96 h-96 bg-[#B08D55]/10 rounded-full blur-3xl"></div>
@@ -47,10 +47,10 @@
     </div>
 
   </div>
-</div> -->
+</div>
 
 
-<div class="min-h-screen flex justify-center items-center bg-[#F3EFE0] font-sans relative overflow-hidden p-4">
+<!-- <div class="min-h-screen flex justify-center items-center bg-[#F3EFE0] font-sans relative overflow-hidden p-4">
 
   <div class="absolute top-[-10%] left-[-10%] w-96 h-96 bg-[#B08D55]/5 rounded-full blur-3xl"></div>
   <div class="absolute bottom-[-10%] right-[-10%] w-96 h-96 bg-[#B08D55]/10 rounded-full blur-3xl"></div>
@@ -157,4 +157,4 @@
     </div>
 
   </div>
-</div>
+</div> -->
